@@ -36,6 +36,8 @@ tests = (
     """<a b='c'>""",
     """<a b=c">""",
     """<a b="c>""",
+    """<a b="">""",
+    """<a b=''>""",
     """<a b=>""",
     """<a =c>""",
     """<a =>""",
