@@ -1,8 +1,9 @@
 webcleaner (0.20) unstable; urgency=low
 
   * documentation updates
+  * removed superfluous debian/conffile
 
- -- Bastian Kleineidam <calvin@debian.org>  Tue, 23 Oct 2001 11:03:25 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Tue, 23 Oct 2001 18:35:25 +0200
 
 webcleaner (0.19) unstable; urgency=low
 
